# Wall-E-

./: README.md
armpi_pro/: test.py
armpi_pro/devel/include/chassis_control/: SetTranslation.h  SetVelocity.h
armpi_pro/devel/include/color_tracking/: SetTargetRequest.h  SetTargetResponse.h
armpi_pro/devel/include/intelligent_transport/: SetTargetRequest.h  SetTargetResponse.h
armpi_pro/devel/include/my_cpp_service/: SimpleService.h  SimpleServiceRequest.h  SimpleServiceResponse.h
armpi_pro/devel/include/object_tracking/: SetTargetRequest.h  SetTargetResponse.h
armpi_pro/devel/include/sensor/: Led.h  Motor.h  RGB.h  Servo.h
armpi_pro/devel/include/simple_cpp_service/: SimpleService.h  SimpleServiceRequest.h  SimpleServiceResponse.h
armpi_pro/devel/include/test/: Person.h  PersonRequest.h  PersonResponse.h  angle.h  angleRequest.h  angleResponse.h
armpi_pro/devel/include/visual_patrol/: SetTargetRequest.h  SetTargetResponse.h
armpi_pro/devel/include/visual_processing/: Result.h  SetParamRequest.h  SetParamResponse.h
armpi_pro/devel/lib/pkgconfig/: my_cpp_service.pc  simple_cpp_service.pc  test.pc
armpi_pro/devel/lib/simple_cpp_service/: simple_cpp_service_node
armpi_pro/src/simple_cpp_service/: .CMakeLists.txt.swo  CMakeLists.txt
armpi_pro/src/simple_cpp_service/scripts/: .simple_python_client.py.swp  simple_cpp_service_node.cpp  simple_python_client.py
armpi_pro/src/simple_cpp_service/srv/: .SimpleService.srv.swo  .SimpleService.srv.swp  SimpleService.srv
camera_clients/: grib_angle.py  trash_sign_feature_matching.py  vision_model.py
(+42 files in other folders)
